# mi-home-toolkit

./: .gitignore  README.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/miio/src/: lib.rs
src-tauri/src/: main.rs
src/app/: app.component.html  app.component.ts  app.routes.ts  auth.service.ts  mi.service.ts
src/app/dialogs/close-preference-dialog/: close-preference-dialog.component.ts
src/app/dialogs/execute-command-dialog/: execute-command-dialog.component.ts
src/app/dialogs/settings-dialog/: settings-dialog.component.ts
src/app/icon/: icon.types.ts
src/app/pages/: devices-page.component.ts  login-page.component.ts
src/app/services/: settings.service.ts
